# Loading-Screen-Locker

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_output.txt  skse_debug.txt  vcpkg-configuration.json  vcpkg.json
Data/SKSE/Plugins/: LoadingScreenLocker.ini
src/: InputHandler.cpp  InputHandler.h  PCH.h  Settings.cpp  Settings.h  main.cpp
